extends Control

# ‡∏≠‡πâ‡∏≤‡∏á‡∏≠‡∏¥‡∏á‡∏õ‡∏∏‡πà‡∏°‡πÅ‡∏•‡∏∞‡πÄ‡∏™‡∏µ‡∏¢‡∏á
@onready var resume_button = $VBoxContainer/ResumeButton
@onready var menu_button = $VBoxContainer/MenuButton
@onready var audio_click = $AudioClick # üü¢ ‡πÄ‡∏û‡∏¥‡πà‡∏°‡∏ö‡∏£‡∏£‡∏ó‡∏±‡∏î‡∏ô‡∏µ‡πâ

func _ready():
	visible = false
	if not resume_button.pressed.is_connected(_on_resume_button_pressed):
		resume_button.pressed.connect(_on_resume_button_pressed)
	if not menu_button.pressed.is_connected(_on_menu_button_pressed):
		menu_button.pressed.connect(_on_menu_button_pressed)

func _input(event):
	if event.is_action_pressed("ui_cancel"):
		toggle_pause()

func toggle_pause():
	var new_pause_state = not get_tree().paused
	get_tree().paused = new_pause_state
	visible = new_pause_state
	
	# ‡∏ñ‡πâ‡∏≤‡∏≠‡∏¢‡∏≤‡∏Å‡πÉ‡∏´‡πâ‡∏°‡∏µ‡πÄ‡∏™‡∏µ‡∏¢‡∏á‡∏ï‡∏≠‡∏ô‡πÄ‡∏õ‡∏¥‡∏î/‡∏õ‡∏¥‡∏î‡πÄ‡∏°‡∏ô‡∏π‡∏î‡πâ‡∏ß‡∏¢ ‡πÉ‡∏™‡πà‡∏ï‡∏£‡∏á‡∏ô‡∏µ‡πâ‡πÑ‡∏î‡πâ‡∏Ñ‡∏£‡∏±‡∏ö
	if audio_click:
		audio_click.play()

# --- ‡∏ü‡∏±‡∏á‡∏Å‡πå‡∏ä‡∏±‡∏ô‡πÄ‡∏°‡∏∑‡πà‡∏≠‡∏Å‡∏î‡∏õ‡∏∏‡πà‡∏° ---

func _on_resume_button_pressed():
	# üîä ‡πÄ‡∏•‡πà‡∏ô‡πÄ‡∏™‡∏µ‡∏¢‡∏á‡∏Ñ‡∏•‡∏¥‡∏Å‡∏Å‡πà‡∏≠‡∏ô
	if audio_click:
		audio_click.play()
	
	# ‡∏£‡∏≠‡∏à‡∏±‡∏á‡∏´‡∏ß‡∏∞‡πÄ‡∏™‡∏µ‡∏¢‡∏á‡∏ô‡∏¥‡∏î‡∏ô‡∏∂‡∏á‡∏Å‡πà‡∏≠‡∏ô‡πÄ‡∏£‡∏¥‡πà‡∏°‡πÄ‡∏Å‡∏°‡∏ï‡πà‡∏≠ (‡πÄ‡∏û‡∏∑‡πà‡∏≠‡∏Ñ‡∏ß‡∏≤‡∏°‡∏™‡∏°‡∏à‡∏£‡∏¥‡∏á)
	await get_tree().create_timer(0.1).timeout 
	toggle_pause()

func _on_menu_button_pressed():
	# üîä ‡πÄ‡∏•‡πà‡∏ô‡πÄ‡∏™‡∏µ‡∏¢‡∏á‡∏Ñ‡∏•‡∏¥‡∏Å
	if audio_click:
		audio_click.play()
	
	# ‡∏£‡∏≠‡πÄ‡∏™‡∏µ‡∏¢‡∏á‡πÅ‡∏õ‡πä‡∏ö‡∏ô‡∏∂‡∏á‡∏Å‡πà‡∏≠‡∏ô‡πÄ‡∏õ‡∏•‡∏µ‡πà‡∏¢‡∏ô‡∏â‡∏≤‡∏Å
	await get_tree().create_timer(0.1).timeout
	
	get_tree().paused = false
	get_tree().change_scene_to_file("res://scene/main_menu.tscn")
